--- a/package.json
+++ b/package.json
@@ -12,16 +12,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@storybook/addon-storysource": "^5.3.12",
+    "g": "^2.0.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-icons": "^2.2.7",
+    "react-scripts": "3.3.1",
+    "reactstrap": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@storybook/addon-actions": "^5.3.12",
     "@storybook/addon-docs": "^5.3.12",
+    "@storybook/addon-info": "^5.3.12",
     "@storybook/addon-links": "^5.3.12",
     "@storybook/addons": "^5.3.12",
     "@storybook/react": "^5.3.12",
-    "babel-loader": "^8.0.6"
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "storybook-addon-jsx": "^7.1.14",
+    "webpack-cli": "^3.3.10"
   }
 }
