--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/preset-react": "^7.8.3",
+    "@emotion/core": "^10.0.27",
     "@storybook/addon-storysource": "^5.3.12",
+    "@storybook/api": "^5.3.13",
+    "@storybook/components": "^5.3.13",
+    "@storybook/theming": "^5.3.13",
+    "emotion": "^10.0.27",
     "g": "^2.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
