--- a/package.json
+++ b/package.json
@@ -12,6 +12,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@devexpress/dx-core": "^2.3.1",
+    "@devexpress/dx-react-core": "^2.3.1",
+    "@devexpress/dx-react-grid": "^2.3.1",
+    "@progress/kendo-data-query": "^1.5.2",
+    "@progress/kendo-drawing": "^1.6.0",
+    "@progress/kendo-react-animation": "^3.9.0",
+    "@progress/kendo-react-data-tools": "^3.9.0",
+    "@progress/kendo-react-dateinputs": "^3.9.0",
+    "@progress/kendo-react-dropdowns": "^3.9.0",
+    "@progress/kendo-react-excel-export": "^3.9.0",
+    "@progress/kendo-react-dialogs": "^3.11.0",
+    "@progress/kendo-react-grid": "^3.9.0",
+    "@progress/kendo-react-tooltip": "^3.11.0",
+    "@progress/kendo-react-inputs": "^3.9.0",
+    "@progress/kendo-react-intl": "^3.9.0",
+    "@progress/kendo-react-pdf": "^3.9.0",
+    "@progress/kendo-theme-default": "^4.9.0",
+    "axios": "^0.19.2",
+    "node-fetch": "^2.6.0",
+    "node-sass": "^4.13.1",
     "@babel/preset-react": "^7.8.3",
     "@emotion/core": "^10.0.27",
     "@storybook/addon-storysource": "^5.3.12",
@@ -24,6 +44,7 @@
     "react-dom": "^16.12.0",
     "react-icons": "^2.2.7",
     "react-scripts": "3.3.1",
+    "react-datepicker": "^2.9.6",
     "reactstrap": "^8.0.1"
   },
   "devDependencies": {
