--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@storybook/react": "^5.3.12",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "file-loader": "^5.1.0",
     "node-sass": "^4.13.1",
     "storybook-addon-jsx": "^7.1.14",
     "webpack-cli": "^3.3.10"
